<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_bleak</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nndai0603@gmail.com">ngocdai</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>ament_cmake</build_depend>
  <build_depend>bleak</build_depend>
  <build_depend>numpy</build_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>bleak</exec_depend>
  <exec_depend>asyncio</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>geometrt_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
